# My-dashboard

./: .env.example  .gitignore  .mcp.json  CLAUDE.md  pyproject.toml  requirements.txt
.github/: SECRETS_SETUP.md
api/: main.py
dashboard/: package-lock.json  package.json  tailwind.config.js
docs/: artifact-conventions.md  backtest-engine.md  baseline-models.md  data-validation.md  dataset-assembly.md  evidence-engine.md  experiment-registry.md  graph-layer.md  implementation-roadmap.md  mlp-baseline.md  model-comparison.md  repo-reality-audit.md  source-probe.md  source-registry.md  source-scout.md  train-mlp-cli.md  walk-forward-operational-review.md  walk-forward-validation.md
skills/: env.py  logger.py
tests/: test_auto_runner.py  test_backtest.py  test_baseline.py  test_comparison.py  test_connectors.py  test_dataset_builder.py  test_discoveries_api.py  test_discovery_store.py  test_ecb_connector.py  test_edge_confidence.py  test_evidence.py  test_evidence_bridge.py  test_experiment_registry.py  test_experiments_api.py  test_features.py  test_finnhub_connector.py  test_graph.py  test_graph_analyzer.py  test_graph_export.py  test_graph_intelligence.py  test_graph_materializer.py  test_graph_reasoning.py  test_graph_routes.py  test_graph_snapshots.py  test_graph_sync.py  test_ingest_run.py  test_ingest_validation.py  test_intelligence_persistence.py  test_lstm.py  test_macro_calendar.py  test_mlp.py  test_neo4j.py  test_noise_filter.py  test_probe_catalog.py  test_qdrant.py  test_sampler.py  test_scout_pipeline.py  test_sector_classification.py  (+13 more)
(+155 files in other folders)
